--- a/udagram/udagram-frontend/package.json
+++ b/udagram/udagram-frontend/package.json
@@ -9,7 +9,7 @@
     "build": "ng build",
     "deploy": "npm install -f && npm run build && aws s3 cp --recursive --acl public-read ./www s3://bucket-udagram-lotfy/ && aws s3 cp --recursive --acl public-read ./www s3://bucket-udagram-lotfy/ &&  aws s3 cp --acl public-read --cache-control=\"max-age=0, no-cache, no-store, must-revalidate\" ./www/index.html s3://bucket-udagram-lotfy/",
     "test": "ng test --watch=false",
-    "lint": "ng lint",
+    "lint": "ng lint --fix",
     "e2e": "ng e2e"
   },
   "private": true,
