--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,8 @@ jobs:
       # install node and checkout code
       - node/install:
           node-version: "14"
+      - aws-cli/setup:
+          profile-name: fullstackuser
       - checkout
       # Use root level package.json to install dependencies in the frontend app
       - run:
@@ -63,7 +65,7 @@ workflows:
             branches:
               only:
                 - main
-          type: approval
+          # type: approval
           requires:
             - build
       - deploy:
