--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -5,7 +5,7 @@ branch-defaults:
 deploy:
   artifact: Archive.zip
 environment-defaults:
-  udagram-api-dev:
+  tifanaga:
     branch: null
     repository: null
 global:
