--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -18,6 +18,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
+  profile: fullstackuser
   repository: null
   sc: null
   workspace_type: Application
