--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,14 +60,14 @@ workflows:
   udagram:
     jobs:
       - build
-      - hold:
-          filters:
-            branches:
-              only:
-                - main
-          type: approval
-          requires:
-            - build
+      # - hold:
+        filters:
+          branches:
+            only:
+              - main
+        type: approval
+        requires:
+          - build
       - deploy:
           requires:
             - hold
