--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ workflows:
   udagram:
     jobs:
       - build:
-      - hold
+      # - hold:
         filters:
           branches:
             only:
